objects/Setup_VCS_branch__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>setup_vcs__c</fullName>
        <label>setup_vcs</label>
        <referenceTo>setup_vcs__c</referenceTo>
        <relationshipLabel>Setup_VCS_branch</relationshipLabel>
        <relationshipName>Setup_VCS_branch</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <label>url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Setup_VCS_branch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VCS_Branch_list</fullName>
        <columns>NAME</columns>
        <columns>Branch_Name__c</columns>
        <columns>url__c</columns>
        <columns>setup_vcs__c</columns>
        <filterScope>Everything</filterScope>
        <label>VCS Branch list</label>
    </listViews>
    <nameField>
        <displayFormat>SVB-{00000}</displayFormat>
        <label>Setup_VCS_branch#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup_VCS_branch</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>